--- a/floating.html
+++ b/floating.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <link href="/vite.svg" rel="icon" type="image/svg+xml"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>HSR Scanner2</title>
+    <title>小窗显示</title>
 </head>
 <body>
 <div id="root"></div>
